--- a/app/views/baits/_bait.html.erb
+++ b/app/views/baits/_bait.html.erb
@@ -2,7 +2,7 @@
 <%= tag.div id: dom_id(bait) do %>
   <%= current_second %>
   <div class="bait">
-    <%= link_to image_tag(bait.image), bait %>
+    <%= link_to image_tag(bait.image), bait, data: {turbo_frame: '_top'} %>
     <div class="name">
       <%= link_to bait.name, bait, data: {turbo_frame: '_top'} %>
     </div>
