--- a/app/views/tackle_box_items/show.html.erb
+++ b/app/views/tackle_box_items/show.html.erb
@@ -16,9 +16,9 @@
     </div>
   </div>
 
-  <div id='new_catch'>
+  <%= turbo_frame_tag 'new_catch'%>
     <%= render "fish_catches/form", fish_catch: @new_catch %>
-  </div>
+  <% end %>
 
   <div class="catches" id='catches'>
     <%= render @fish_catches %>
