--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -1,6 +1,15 @@
 <%= turbo_stream_from 'activity' %>
 
 <div id='catches'>
-  <%= render collection: @fish_catches,
-           partial: "activity/fish_catch" %>
+  <%= turbo_frame_tag "catches_page_#{@pagy.page}" do %>
+    <%= render collection: @fish_catches,
+            partial: "activity/fish_catch" %>
+
+    <% if @pagy.next %>
+      <%= turbo_frame_tag "catches_page_#{@pagy.next}", scr: activity_path(page: @pagy.next), loading: :lazy do %>
+        <div class='loader'>Loading...</div>
+      <% end %>
+    <% end %>
+  <% end %>
 </div>
+
